--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "start": "node dist/index.js",
     "test": "tsx src/test/testConnection.ts",
     "monitor": "tsx src/examples/monitorFlowOutputs.ts",
-    "monitor-specific": "tsx src/examples/specificOrgMonitor.ts"
+    "monitor-specific": "tsx src/examples/specificOrgMonitor.ts",
+    "websocket-server": "tsx src/services/WebSocketServer.ts"
   },
   "dependencies": {
-    "kafkajs": "^2.2.4"
+    "kafkajs": "^2.2.4",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "@types/ws": "^8.18.1",
     "tsx": "^4.6.0",
     "typescript": "^5.3.0"
   }
